# otptray

./: .gitignore  Cargo.toml  Makefile  README.md  Vagrantfile  default.nix  flake.nix
application/: Cargo.toml  Makefile  Vagrantfile
application/assets/: logo.xcf
application/deb/: control
application/macos/: Info.plist
application/src/: common.rs  main.rs
application/src/linux/: gui.rs
application/src/macos/: gui.rs
assets/: logo.dxf
deb/: control
macos/: Info.plist
share/applications/: otptray.desktop
src/: main.rs
src/macos/: gui.rs
