[package]
name = "otptray"
version = "0.1.0"
authors = ["Blake Smith <blakesmith0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_immut = "0.1.4"
gtk = "0.9.2"
libappindicator = "0.5.2"
lazy_static = "1.4.0"
rand = "0.8.3"

[dependencies.gdk]
features = ["v3_16"]
version = "0.13.2"