[package]
name = "otptray"
version = "0.1.0"
authors = ["Blake Smith <blakesmith0@gmail.com>"]
edition = "2018"

[dependencies]
atomic_immut = "0.1.4"
base32 = "0.4"
dirs = "3.0"
gtk = "0.9.2"
glib = "0.10"
libappindicator = "0.5.2"
lazy_static = "1.4.0"
totp-lite = "1.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

[dependencies.gdk]
features = ["v3_16"]
version = "0.13.2"