[package]
name = "otptray"
version = "0.1.0"
authors = ["Blake Smith <blakesmith0@gmail.com>"]
edition = "2018"

[dependencies]
atomic_immut = "0.1.4"
base32 = "0.4"
dirs = "3.0"
lazy_static = "1.4.0"
log = "0.4"
totp-lite = "1.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
simple_logger = "1.11.0"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.9.2"
glib = "0.10"
libappindicator = "0.5.2"
gdk = { features = ["v3_16"], version = "0.13.2" }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.0"
cocoa-foundation = "0.1.0"
core-foundation = "0.9.1"
objc = "0.2.3"